[project]
name = "suno"
version = "1.0.0"
description = "Griptape Nodes Library for Suno AI Music Generation"
authors = [
    {name = "Griptape", email = "info@griptape.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "griptape-nodes",
    "requests"
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[tool.hatch.build.targets.wheel]
packages = ["suno"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

